Fixes headers being under navbar on mobile

--- a/sass/_style.sass
+++ b/sass/_style.sass
@@ -244,6 +244,7 @@ h2 a[href]
 header
     position: relative
     top: 2.5em
+    height: 3em
 
 // Clear the way for the header
 #about-me + .section-heading
@@ -468,8 +469,6 @@ h1, .h1
     letter-spacing: 0.05em
     color: $name-color
     margin: 0.5em 0
-header + h1
-    margin-top: 2em
 .k-source-essay
     h1, .h1
         text-align: left
